# detquantlib

./: .gitignore  README.md  docs.py  init  pyproject.toml  run.py  tasks.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pypi_publisher.yml  python-ci.yml  python-package-publisher.yml  python-package.yml  versioning-publisher.yml  versioning.yml
detquantlib/data/databases/: detdatabase.py
detquantlib/data/entsoe/: entsoe.py
detquantlib/data/sftp/: sftp.py
detquantlib/figures/: plotly_figures.py
detquantlib/forecasting/: forecasting.py
detquantlib/outputs/: outputs_interface.py
detquantlib/tradable_products/: tradable_products.py
detquantlib/utils/: utils.py
tests/: test_unit.py
tests/dates/: test_dates.py
tests/forecasting/: __init__.py  test_forecasting.py
tests/forecasting/_Data/: forecast_knife_strategy_in.csv
tests/test_forecasting/: test_forecasting.py
tests/test_forecasting/_Data/: forecast_knife_strategy_out.npy
tests/tradable_products/: test_tradable_products.py
tests/utils/: test_utils.py
